# loopy

./: .gitignore  Cargo.toml  LICENSE  SKILL.md  coordinator.md
crates/common/bundle/: Cargo.toml
crates/common/bundle/src/: lib.rs
crates/common/events/: Cargo.toml
crates/common/events/src/: lib.rs
crates/common/invocation/: Cargo.toml
crates/common/invocation/src/: lib.rs
crates/common/projection/: Cargo.toml
crates/common/projection/src/: lib.rs
crates/common/sqlite/: Cargo.toml
crates/common/sqlite/src/: lib.rs
crates/execute-plan/bundle/: Cargo.toml
crates/execute-plan/bundle/src/: lib.rs
crates/execute-plan/cli/: Cargo.toml
crates/execute-plan/cli/src/: main.rs
crates/gen-plan/bundle/: Cargo.toml
crates/gen-plan/bundle/src/: lib.rs
crates/gen-plan/cli/: Cargo.toml
crates/gen-plan/cli/src/: main.rs
crates/gen-plan/core/: Cargo.toml
crates/gen-plan/core/src/: api.rs  lib.rs
crates/gen-plan/core/src/refine/: decision.rs  gate_execution.rs  gate_registration.rs  gate_targets.rs  impact.rs  mod.rs  rewrite.rs  runtime_state.rs  scope.rs  summary.rs
crates/gen-plan/core/src/runtime/: child_links.rs  comments.rs  db.rs  gates.rs  mod.rs  query.rs
crates/gen-plan/core/tests/: cli_commands.rs  gate_runs.rs  install_bundle.rs  real_codex_smoke.rs  refine_contracts.rs  runtime_kernel.rs
crates/gen-plan/core/tests/support/: mod.rs
crates/submit-loop/api/: Cargo.toml
crates/submit-loop/api/src/: lib.rs
crates/submit-loop/bundle/: Cargo.toml
crates/submit-loop/bundle/src/: lib.rs
crates/submit-loop/cli/: Cargo.toml
crates/submit-loop/cli/src/: main.rs
crates/submit-loop/core/: Cargo.toml
crates/submit-loop/core/src/runtime/: api.rs  mod.rs  projection.rs  query.rs  roles.rs  system.rs
crates/submit-loop/core/src/runtime/ops/: invocation.rs  loop.rs  submissions.rs
crates/submit-loop/core/tests/: cli_commands.rs  coordinator_apis.rs  dispatch_lifecycle.rs  failure_result.rs  install_bundle.rs  invocation_opening.rs  real_codex_smoke.rs  recovery.rs  runtime_kernel.rs  terminal_apis.rs  workspace_layout.rs
crates/submit-loop/core/tests/support/: mod.rs
docs/superpowers/specs/: 2026-04-20-gen-plan-frontier-review-prompt-draft.md  2026-04-20-gen-plan-leaf-review-prompt-draft.md  2026-04-20-gen-plan-review-gates-design.md
roles/coding-task/artifact_reviewer/: codex_correctness.md  mock.md
roles/coding-task/artifact_worker/: mock_implementer.md
roles/coding-task/checkpoint_reviewer/: mock.md
roles/coding-task/planning_worker/: mock_planner.md
scripts/: install-gen-plan-skill.sh  install-submit-loop-skill.sh  real-submit-loop-suite-codex.sh  smoke-installed-bundle-codex.sh  smoke-installed-gen-plan-codex.sh
skills/: dev-registry.toml
skills/execute-plan/: SKILL.md  bundle.toml  execute-plan.toml
skills/gen-plan/: SKILL.md  bundle.toml  gen-plan.toml
skills/gen-plan/prompts/: domain_contract.md  frontier_runtime.md  leaf_runtime.md  refine_instructions.md
skills/gen-plan/roles/coding-task/: task-type.toml
skills/gen-plan/roles/coding-task/frontier_reviewer/: codex_default.md  mock.md
skills/gen-plan/roles/coding-task/leaf_reviewer/: codex_default.md  mock.md
skills/submit-loop/: SKILL.md  bundle.toml  coordinator.md  submit-loop.toml
skills/submit-loop/roles/coding-task/: task-type.toml
skills/submit-loop/roles/coding-task/artifact_reviewer/: codex_checkpoint_contract.md  codex_code_quality.md
skills/submit-loop/roles/coding-task/artifact_worker/: codex_implementer.md
skills/submit-loop/roles/coding-task/checkpoint_reviewer/: codex_contract.md  codex_plan.md  codex_scope.md
skills/submit-loop/roles/coding-task/planning_worker/: codex_planner.md
src/: lib.rs  main.rs
src/runtime/: api.rs  mod.rs  projection.rs  query.rs  roles.rs  system.rs
src/runtime/ops/: caller_finalize.rs  invocation.rs  mod.rs
tests/: caller_finalize_apis.rs  cli_commands.rs  coordinator_apis.rs  dispatch_lifecycle.rs  failure_result.rs  install_bundle.rs  invocation_opening.rs  real_codex_smoke.rs  recovery.rs  runtime_kernel.rs  terminal_apis.rs
tests/support/: mod.rs
