[package]
name = "loopy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
toml = "0.9"
uuid = { version = "1.18", features = ["serde", "v4", "v7"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.23"
