[workspace]
members = [
    "crates/common/sqlite",
    "crates/common/events",
    "crates/common/projection",
    "crates/common/invocation",
    "crates/common/bundle",
    "crates/submit-loop/api",
    "crates/submit-loop/bundle",
    "crates/submit-loop/core",
    "crates/submit-loop/cli",
    "crates/gen-plan/bundle",
    "crates/gen-plan/cli",
    "crates/execute-plan/bundle",
    "crates/execute-plan/cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
clap = { version = "4.5", features = ["derive"] }
predicates = "3.1"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.23"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
toml = "0.9"
uuid = { version = "1.18", features = ["serde", "v4", "v7"] }
