[package]
name = "loopy-gen-plan-core"
version.workspace = true
edition.workspace = true

[lib]
name = "loopy_gen_plan"

[dependencies]
anyhow.workspace = true
clap.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
loopy-common-bundle = { path = "../../common/bundle" }
loopy-common-sqlite = { path = "../../common/sqlite" }
loopy-gen-plan-bundle = { path = "../bundle" }

[dev-dependencies]
anyhow.workspace = true
