[package]
name = "loopy-gen-plan-core"
version.workspace = true
edition.workspace = true

[lib]
name = "loopy_gen_plan"

[dependencies]
anyhow.workspace = true
rusqlite.workspace = true
serde.workspace = true
uuid.workspace = true
loopy-common-sqlite = { path = "../../common/sqlite" }

[dev-dependencies]
anyhow.workspace = true
serde_json.workspace = true
