[package]
name = "loopy-submit-loop-bundle"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
loopy-common-bundle = { path = "../../common/bundle" }
loopy-submit-loop-api = { path = "../api" }
